--- a/debian/control
+++ b/debian/control
@@ -1,9 +1,10 @@
 Source: librement
 Section: net
 Priority: optional
-Maintainer: Chris Lamb <chris@lambynet.co.uk>
-Build-Depends: debhelper (>= 8)
-Standards-Version: 3.9.2
+Maintainer: Raphaël Hertzog <raphael@freexian.com>
+Uploaders: Chris Lamb <chris@lambynet.co.uk>
+Build-Depends: debhelper (>= 9), python (>= 2.6.6-3~)
+Standards-Version: 3.9.3
 
 Package: librement
 Architecture: all
@@ -13,6 +14,6 @@ Depends:
   python-bcrypt,
   python-django,
   python-django-south,
-  python-imaging.
+  python-imaging,
   python-psycopg2,
   python-feedparser,
