--- a/debian/rules
+++ b/debian/rules
@@ -3,10 +3,10 @@
 export PYTHONDONTWRITEBYTECODE = 1
 
 %:
-	dh $@
+	dh $@ --with python2
 
-override_dh_auto_clean:
-	rm -f src/contrib/*/*.log
+override_dh_install:
+	dh_install -Xgit.log
 
 override_dh_auto_test:
 	src/librement/manage.py test --verbosity=2
