Use Debian's python-django-debug-toolbar.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -19,6 +19,7 @@ Depends:
   python-psycopg2,
   python-feedparser,
   python-memcache,
+  python-django-debug-toolbar,
 Description: Free software funding platform
  Librement is a platform to help:
   - free software developers who want to fund their free software work
