--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Depends:
   ${python:Depends},
   pwgen,
   python-bcrypt,
-  python-django,
+  python-django (>= 1.4.1),
   python-django-south,
   python-imaging,
   python-psycopg2,
